# my_multi_agent_demo

./: .env  .gitignore  README.md  pyproject.toml
app/backend/: __init__.py  main.py
app/backend/models/: __init__.py  events.py  schemas.py
app/backend/routes/: __init__.py  agent_router.py  health_router.py
app/backend/services/: __init__.py  graph_service.py
src/: __init__.py  main.py
src/agents/: __init__.py  analysis_agent.py  execution_agent.py  planner_agent.py  summary_agent.py
src/graph/: __init__.py  builder.py  state.py
src/llm/: __init__.py  models.py
src/tools/: __init__.py  search_tool.py  weather_tool.py
src/utils/: __init__.py  progress.py
